# audio-modules

./: CMakeLists.txt  README.md  _clang-format
.github/workflows/: cmake.yml
include/ha/audio_modules/: audio_modules.h  convert_funcs.h  module.h  module_factory.h  module_tags.h  param_info.h  types.h
include/hao/audio_modules/: audio_modules.h  convert_funcs.h  module.h  module_factory.h  module_tags.h  param_info.h  types.h
source/factory/: module_factory.cpp
source/trance_gate/: silence_detection.cpp  silence_detection.h  trance_gate_config.cpp  trance_gate_config.h  trance_gate_processor.cpp  trance_gate_processor.h
test/: audio_modules_graph_printer.cpp  module_factory_test.cpp  thread_malloc_detector.cpp  thread_malloc_detector.h  trance_gate_processor_test.cpp
